deploy/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haveniq
  labels:
    app.kubernetes.io/part-of: haveniq-support
