deploy/manifests/42-voice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haveniq-voice
  namespace: haveniq
  labels: { app.kubernetes.io/name: haveniq-voice, app.kubernetes.io/part-of: haveniq-support }
  annotations: { reloader.stakater.com/auto: "true" }
spec:
  replicas: 1
  strategy: { type: Recreate }
  selector: { matchLabels: { app.kubernetes.io/name: haveniq-voice } }
  template:
    metadata: { labels: { app.kubernetes.io/name: haveniq-voice } }
    spec:
      terminationGracePeriodSeconds: 300
      containers:
        - name: worker
          image: quay-quay-quay-test.apps.salamander.aimlworkbench.com/deanpeterson/haveniq-voice:latest
          imagePullPolicy: Always
          resources: { requests: { cpu: 500m, memory: 1Gi }, limits: { cpu: "2", memory: 3Gi } }
